gitops/apps/privatebin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privatebin
  namespace: privatebin
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: privatebin
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      containers:
        - name: privatebin
          image: privatebin/fs:stable@sha256:365688905cfde1c1785baff81011f0382998b2c1294749cce67cfcf25877c71e
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: privatebin-data
              mountPath: /srv/data
            - name: privatebin-config
              mountPath: /srv/cfg
              readOnly: true
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: "50Mi"
              cpu: "20m"
      volumes:
        - name: privatebin-data
          emptyDir: {}
        - name: privatebin-config
          configMap:
            name: privatebin-config
