gitops/apps/privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: privatebin
